Fix: Fixed header display problem on mobile device. Adjust Day/Date display

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,10 +33,6 @@
 	margin-right: 0px;
 }
 
-.custom-text {
-	font-style: normal;
-}
-
 .jumbotron-custom {
 	padding: 2rem 1rem;
 	background-color: #e9ecef;
